--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./src/assets/brainwave-symbol.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>illustratemarketingae</title>
+    <title>illustrate marketing ae</title>
   </head>
   <body>
     <div id="root"></div>
