--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./src/assets/brainwave-symbol.svg"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>illustrate marketing ae</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <title>Illustrate Marketing AE | Digital Marketing Agency in UAE</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="./src/assets/brainwave-symbol.svg" />
+
+  <!-- Meta Description (very important for Google) -->
+  <meta name="description" content="Illustrate Marketing is a UAE-based digital marketing agency offering web design, branding, social media, and more. We help businesses grow online." />
+
+  <!-- Open Graph for social media previews -->
+  <meta property="og:title" content="Illustrate Marketing AE" />
+  <meta property="og:description" content="A creative digital marketing agency in the UAE. Your brand, beautifully told." />
+  <meta property="og:image" content="https://www.illustratemarketing.ae/your-image.jpg" />
+  <meta property="og:url" content="https://www.illustratemarketing.ae/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Illustrate Marketing AE" />
+  <meta name="twitter:description" content="A creative digital marketing agency in the UAE." />
+  <meta name="twitter:image" content="https://www.illustratemarketing.ae/your-image.jpg" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.illustratemarketing.ae/" />
+</head>
