--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title -->
-    <title>Illustrate Marketing AE | Creative Agency in UAE</title>
+    <title>Illustrate Marketing AE</title>
 
     <!-- Favicon -->
     <link
@@ -18,7 +18,7 @@
     <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Illustrate Marketing is a UAE-based creative digital agency offering branding, web design, and social media services."
+      content="Illustrate Marketing ae is a UAE-based creative digital agency offering branding, web design, and social media services."
     />
 
     <!-- Open Graph (Facebook, LinkedIn) -->
