--- a/index.html
+++ b/index.html
@@ -1,54 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Charset and Viewport -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <!-- Charset and Viewport -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Title -->
-    <title>Illustrate Marketing AE</title>
+  <!-- Title -->
+  <title>Illustrate Marketing AE</title>
 
-    <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/brainwave-symbol.svg"
-    />
+  <!-- Favicon -->
+  <link
+    rel="icon"
+    type="image/svg+xml"
+    href="/src/assets/brainwave-symbol.svg"
+  />
 
-    <!-- SEO Meta Tags -->
-    <meta
-      name="description"
-      content="Illustrate Marketing ae is a UAE-based creative digital agency offering branding, web design, and social media services."
-    />
+  <!-- SEO Meta Tags -->
+  <meta
+    name="description"
+    content="Illustrate Marketing AE is a UAE-based creative digital agency offering branding, web design, and social media services. Connect with us on Instagram."
+  />
 
-    <!-- Open Graph (Facebook, LinkedIn) -->
-    <meta property="og:title" content="Illustrate Marketing AE" />
-    <meta
-      property="og:description"
-      content="A creative agency in the UAE delivering impactful digital experiences."
-    />
-    <meta property="og:image" content="https://www.illustratemarketing.ae/og-image.jpg" />
-    <meta property="og:url" content="https://www.illustratemarketing.ae/" />
-    <meta property="og:type" content="website" />
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Illustrate Marketing AE" />
+  <meta
+    property="og:description"
+    content="A creative agency in the UAE delivering impactful digital experiences. Follow us on Instagram."
+  />
+  <meta property="og:image" content="/brainwave-symbol.svg" />
+  <meta property="og:url" content="https://www.illustratemarketing.ae/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Illustrate Marketing AE" />
+  <meta
+    property="og:see_also"
+    content="https://www.instagram.com/yourusername" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Illustrate Marketing AE" />
-    <meta
-      name="twitter:description"
-      content="A creative agency in the UAE delivering impactful digital experiences."
-    />
-    <meta name="twitter:image" content="https://www.illustratemarketing.ae/og-image.jpg" />
+ 
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://www.illustratemarketing.ae/" />
 
-    <!-- Optional: Canonical link -->
-    <link rel="canonical" href="https://www.illustratemarketing.ae/" />
-
-    <!-- ✅ Optional: Content Security Policy (only use unsafe-eval if required by framework) -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';"> -->
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+  <!-- Instagram Social Profile (if only one link to include) -->
+  <link
+    rel="illustratemarketing"
+    href="https://www.instagram.com/illustratemarketingae"
+  />
+</head>
