--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
   <!-- Charset and Viewport -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +33,7 @@
   <meta property="og:site_name" content="Illustrate Marketing AE" />
   <meta
     property="og:see_also"
-    content="https://www.instagram.com/yourusername" />
+    content="https://www.instagram.com/illustratemarketing" />
 
  
   <!-- Canonical Link -->
@@ -40,6 +42,13 @@
   <!-- Instagram Social Profile (if only one link to include) -->
   <link
     rel="illustratemarketing"
-    href="https://www.instagram.com/illustratemarketingae"
+    href="https://www.instagram.com/illustratemarketing"
   />
 </head>
+
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
